# PRLib

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindLeptonica.cmake
docs/html/: annotated.html  annotated_dup.js  auto_crop_8cpp.html  auto_crop_8cpp.js  auto_crop_8cpp__incl.map  auto_crop_8cpp__incl.md5  auto_crop_8cpp_source.html  auto_crop_8h.html  auto_crop_8h.js  auto_crop_8h__dep__incl.map  auto_crop_8h__dep__incl.md5  auto_crop_8h__incl.map  auto_crop_8h__incl.md5  auto_crop_8h_source.html  auto_crop_utils_8cpp.html  auto_crop_utils_8cpp.js  auto_crop_utils_8cpp__incl.map  auto_crop_utils_8cpp__incl.md5  auto_crop_utils_8cpp_source.html  auto_crop_utils_8h.html  auto_crop_utils_8h.js  auto_crop_utils_8h__dep__incl.map  auto_crop_utils_8h__dep__incl.md5  auto_crop_utils_8h__incl.map  auto_crop_utils_8h__incl.md5  auto_crop_utils_8h_source.html  background_normalization_8cpp.html  background_normalization_8cpp__incl.map  background_normalization_8cpp__incl.md5  background_normalization_8cpp_source.html  background_normalization_8h.html  background_normalization_8h.js  background_normalization_8h__dep__incl.map  background_normalization_8h__dep__incl.md5  background_normalization_8h__incl.map  background_normalization_8h__incl.md5  background_normalization_8h_source.html  balance_color_8cpp.html  balance_color_8cpp__incl.map  balance_color_8cpp__incl.md5  (+538 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_a.js  files_b.js  files_c.js  (+31 more)
papers/: UsefulLinks.txt
samples/: CMakeLists.txt  backgroundNormalization_sample.cpp  cleanBackgroundToWhite_sample.cpp  correctNUIL_sample.cpp  deskew_sample.cpp  removeDots_sample.cpp  removeHolePunch_sample.cpp  removeLines_sample.cpp  warp_sample.cpp
samples/balance/: balanceColor_sample.cpp  balanceGrayWorldWhite_sample.cpp  balanceSimpleWhite_sample.cpp  gammaCorrection_sample.cpp
samples/binarizations/: binarizeByLocalVariances_sample.cpp  binarizeCOCOCLUST_sample.cpp  binarizeFBCITB_sample.cpp  binarizeFeng_sample.cpp  binarizeLocalOtsu_sample.cpp  binarizeMokji_sample.cpp  binarizeNICK_sample.cpp  binarizeNativeAdaptive_sample.cpp  binarizeNiblack_sample.cpp  binarizeSauvola_sample.cpp  binarizeWolfJolion_sample.cpp
samples/border_detection/: autoCropAbbyy_sample.cpp  autoCrop_sample.cpp
samples/deblur/: basicDeblur_sample.cpp  wienerFilter_sample.cpp
samples/denoise/: denoiseSaltPepper_sample.cpp  kuwaharaFilter_sample.cpp
samples/segmentation/: segmentation_sample.cpp
samples/thinning/: thinGuoHall_sample.cpp  thinZhangSuen_sample.cpp
src/: Binarization.cpp  Binarization.hpp  BlurDetection.hpp  Cropping.cpp  Cropping.hpp  Deblur.cpp  Deblur.hpp  Denoising.hpp  Deskew.cpp  Deskew.hpp  Resize.cpp  Resize.hpp  Rotate.cpp  SauvolaBinarization.cpp  Smoothing.hpp  Thinning.hpp  Utils.cpp  Utils.hpp  Warp.cpp  Warp.hpp  backgroundNormalization.cpp  backgroundNormalization.h  binarize.cpp  binarize.h  cleanBackgroundToWhite.cpp  correctNUIL.cpp  correctNUIL.h  deblur.cpp  formatConvert.cpp  formatConvert.h  imageLibCommon.cpp  imageLibCommon.h  logger.hpp  removeDots.cpp  removeDots.h  removeHolePunch.cpp  removeHolePunch.h  removeLines.cpp  removeLines.h  resize.cpp  (+11 more)
src/balance/: balanceColor.cpp  balanceColor.h  balanceGrayWorldWhite.cpp  balanceGrayWorldWhite.h  balanceSimpleWhite.cpp  balanceSimpleWhite.h  gammaCorrection.cpp  gammaCorrection.h
src/binarizations/: binarizeAGT.cpp  binarizeAGT.h  binarizeAT.cpp  binarizeAT.h  binarizeByLocalVariances.cpp  binarizeCOCOCLUST.cpp  binarizeCOCOCLUST.h  binarizeFBCITB.cpp  binarizeFBCITB.h  binarizeFeng.cpp  binarizeFeng.h  binarizeGAT.cpp  binarizeGAT.h  binarizeLocalOtsu.cpp  binarizeLocalOtsu.h  binarizeMokji.cpp  binarizeMokji.h  binarizeNICK.cpp  binarizeNICK.h  binarizeNativeAdaptive.cpp  binarizeNativeAdaptive.h  binarizeNiblack.cpp  binarizeNiblack.h  binarizePureAdaptive.cpp  binarizePureAdaptive.h  binarizePureAdaptiveGaussian.cpp  binarizePureAdaptiveGaussian.h  binarizeSauvola.cpp  binarizeSauvola.h  binarizeWolfJolion.cpp  binarizeWolfJolion.h
src/border_detection/: autoCrop.cpp  autoCrop.h  autoCropAbbyy.cpp  autoCropAbbyy.h  autoCropUtils.cpp  autoCropUtils.h  houghLine.cpp  houghLine.h
src/deblur/: basicDeblur.cpp  basicDeblur.h  wienerFilter.cpp  wienerFilter.h
src/denoise/: denoiseNLM.cpp  denoiseNLM.h  denoiseSaltPepper.cpp  denoiseSaltPepper.h  kuwaharaFilter.cpp  kuwaharaFilter.h
src/deskew/: deskew.cpp  deskew.h
src/detectors/: blurDetection.cpp  blurDetection.h  glareDetection.cpp  glareDetection.h
src/segmentation/: CCC_library.cpp  CCC_library_itnl.h  COS_library.cpp  COS_library.h  COS_library_itnl.h  HP_calib.txt  Main_def.h  Main_segment.cpp  TIFF_RW.cpp  TIFF_RW.h  alloc_util.cpp  alloc_util.h  allocate.cpp  allocate.h  boundary.cpp  boundary.h  classify.cpp  classify.h  clust_defs.h  clust_io.cpp  clust_io.h  clust_util.cpp  clust_util.h  clustermessage.h  convert_color.cpp  convert_color.h  convert_type.cpp  convert_type.h  eigen.cpp  invert.cpp  line.h  marklist.cpp  marklist.h  pbmtools.cpp  pbmtools.h  prior_calc.cpp  prior_calc.h  segmentation.cpp  segmentation.h  segmentation_ccc.cpp  (+3 more)
src/thinning/: thinGuoHall.cpp  thinGuoHall.h  thinZhangSuen.cpp  thinZhangSuen.h
wip/segmentation/: CCC_library.cpp  CCC_library.h  CCC_library_itnl.h  EP_calib.txt  Main_def.h  SA_calib.txt  alloc_util.cpp  alloc_util.h  boundary.cpp  boundary.h  classify.cpp  classify.h  clust_io.cpp  clust_util.cpp  clust_util.h  invert.cpp  marklist.cpp  params_color_ver1  segmentation.h
